--- a/BucStop/BucStop.csproj
+++ b/BucStop/BucStop.csproj
@@ -16,4 +16,8 @@
     <None Include="wwwroot\images\background.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\scoreData\" />
+  </ItemGroup>
+
 </Project>
